--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@hexagon/base64": "^1.1.28",
+    "@simplewebauthn/typescript-types": "^8.3.4",
+    "cbor": "^9.0.2",
+    "cbor-web": "^9.0.2",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-crypto": "^2.2.0",
+    "react-native-passkeys": "^0.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
