--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.73.4",
     "react-native-crypto": "^2.2.0",
     "react-native-passkeys": "^0.2.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "viem": "^2.7.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
